// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render FAQTable page 1, 10 items/page 1`] = `
<div>
  <h3>
    Frequently Asked Questions
  </h3>
  <table
    className="table"
  >
    <tr>
      <th>
        Title
      </th>
      <th>
        Question
      </th>
      <th />
    </tr>
    <tr>
      <th>
        <input
          id="titleInput"
          placeholder="Title"
          title="Type in a name"
          type="text"
        />
      </th>
      <th>
        <input
          id="questionInput"
          placeholder="Question"
          title="Type in a name"
          type="text"
        />
      </th>
      <th>
        <button
          onClick={[Function]}
        >
          Add
        </button>
        <button>
          Save
        </button>
      </th>
    </tr>
    <tbody>
      <tr>
        <td>
          Q1
        </td>
        <td>
          What is my first question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q2
        </td>
        <td>
          What is my second question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q3
        </td>
        <td>
          What is my third question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q4
        </td>
        <td>
          What is my fourth question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q5
        </td>
        <td>
          What is my fifth question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q6
        </td>
        <td>
          What is my sixth question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q7
        </td>
        <td>
          What is my seventh question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q8
        </td>
        <td>
          What is my eight question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q9
        </td>
        <td>
          What is my ninth question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render FAQTable page 2, 5 items/page 1`] = `
<div>
  <h3>
    Frequently Asked Questions
  </h3>
  <table
    className="table"
  >
    <tr>
      <th>
        Title
      </th>
      <th>
        Question
      </th>
      <th />
    </tr>
    <tr>
      <th>
        <input
          id="titleInput"
          placeholder="Title"
          title="Type in a name"
          type="text"
        />
      </th>
      <th>
        <input
          id="questionInput"
          placeholder="Question"
          title="Type in a name"
          type="text"
        />
      </th>
      <th>
        <button
          onClick={[Function]}
        >
          Add
        </button>
        <button>
          Save
        </button>
      </th>
    </tr>
    <tbody>
      <tr>
        <td>
          Q6
        </td>
        <td>
          What is my sixth question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q7
        </td>
        <td>
          What is my seventh question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q8
        </td>
        <td>
          What is my eight question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Q9
        </td>
        <td>
          What is my ninth question?
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
